feat : Implement sort by tracks option in Schedule Fragment  (#1415)
* feat : Add strings for Sort by title  for Schedule Fragment 

Add strings for sort by title in arrays.xml and strings.xml
Rename strings for existing sort methods to meaningful name

* feat : Add sort by tracks option in Day Schedule Fragment

* fix : Sort sticky headers in alphabetical order in Day Schedule Fragment

when sort mode is by tracks

* Update DayScheduleFragment.java

* Update DayScheduleFragment.java

* Update DayScheduleFragment.java

* Update DayScheduleFragment.java

* Update DayScheduleFragment.java

--- a/android/app/src/main/res/values-ar/strings.xml
+++ b/android/app/src/main/res/values-ar/strings.xml
@@ -90,13 +90,14 @@
     <string name="dialog_sort_title">ترتيب حسب</string>
 
     <!--Speaker Sort Dialog text-->
-    <string name="dialog_sort_organisation">المؤسسة</string>
-    <string name="dialog_sort_country">الدولة</string>
-    <string name="dialog_sort_name">اسم المتحدث</string>
+    <string name="dialog_sort_by_organisation">المؤسسة</string>
+    <string name="dialog_sort_by_country">الدولة</string>
+    <string name="dialog_sort_by_speaker_name">اسم المتحدث</string>
 
     <!--Session Sort Dialog text-->
-    <string name="dialog_sort_tracks">المسارات</string>
-    <string name="dialog_sort_sessions">وقت البدأ</string>
+    <string name="dialog_sort_by_title">عنوان</string>
+    <string name="dialog_sort_by_tracks">المسارات</string>
+    <string name="dialog_sort_by_start_time">وقت البدأ</string>
 
 
     <string name="download_assets">هل ترغب في تحديث الجدول الان؟</string>
