--- a/android/app/src/main/res/values-mr/strings.xml
+++ b/android/app/src/main/res/values-mr/strings.xml
@@ -82,13 +82,14 @@
     <string name="dialog_sort_title">क्रमवारी लावा</string>
 
     <!--Speaker Sort Dialog text-->
-    <string name="dialog_sort_organisation">संघटना</string>
-    <string name="dialog_sort_country">देश</string>
-    <string name="dialog_sort_name">स्पीकर नाव</string>
+    <string name="dialog_sort_by_organisation">संघटना</string>
+    <string name="dialog_sort_by_country">देश</string>
+    <string name="dialog_sort_by_speaker_name">स्पीकर नाव</string>
 
     <!--Session Sort Dialog text-->
-    <string name="dialog_sort_tracks">ट्रॅक</string>
-    <string name="dialog_sort_sessions">सुरवातीची वेळ</string>
+    <string name="dialog_sort_by_title">शीर्षक</string>
+    <string name="dialog_sort_by_tracks">ट्रॅक</string>
+    <string name="dialog_sort_by_start_time">सुरवातीची वेळ</string>
 
 
     <string name="download_assets">आपण आता नवीन वेळापत्रक अद्यतनित करू इच्छिता?</string>
