feat : Improve social links implementation in About Fragment (#1809)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -210,6 +210,7 @@
     <string name="read_less">Read Less</string>
     <string name="more_details">For more details check </string>
     <string name="social_links">Social Links</string>
+    <string name="social_link">Social Link</string>
 
     <string name="location_not_decided">Not decided yet</string>
     <string name="result_type">Result Type</string>
