--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name" translatable="false">OpenEvent</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="current_password">Current password</string>
+    <string name="new_password">New password</string>
     <string name="create_password">Create password</string>
     <string name="confirm_password">Confirm password</string>
     <string name="login">Login</string>
@@ -11,6 +13,14 @@
     <string name="have_an_account_question">Have an account?</string>
     <string name="new_here_question">New here?</string>
     <string name="cancel">Cancel</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="edit_profile_confirmation">Do you want to save your changes?</string>
+    <string name="discard">Discard</string>
+    <string name="change_password">Change Password</string>
+    <string name="save">Save</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="avatar">Avatar</string>
 
     <string name="error_email_required">Email is required</string>
     <string name="error_enter_valid_email">Enter a valid email</string>
@@ -20,17 +30,26 @@
     <string name="error_password_not_matching">Password not matching</string>
     <string name="error_in_signing_up">Error in signing up</string>
     <string name="error_authentication_failed">Authentication failed</string>
+    <string name="error_updating_data">Error updating data</string>
+    <string name="error_uploading_image">Error uploading image</string>
+    <string name="error_changing_password">Error changing password</string>
+    <string name="error_password_not_correct">Incorrect password</string>
 
     <string name="logged_in_successfully">Successfully logged in</string>
     <string name="logged_out_successfully">Successfully logged out</string>
     <string name="signed_up_successfully">Successfully signed up</string>
+    <string name="updated_succesfully">Successfully updated info</string>
+    <string name="password_changed_successfully">Successfully changed password</string>
 
     <string name="title_activity_user_profile">My Profile</string>
+    <string name="title_activity_edit_profile">Edit Profile</string>
+    <string name="title_activity_change_password">Change Password</string>
     <string name="title_activity_sign_up">Sign Up</string>
     <string name="title_activity_login">Login</string>
     <string name="title_section_tracks">Tracks</string>
     <string name="title_section_speakerlist">Speakers</string>
     <string name="title_section_location">Locations</string>
+    
     <string name="item_track">This is a track symbol.</string>
     <string name="session_bookmark_status">This image shows the session bookmark status.</string>
     <string name="session_speaker_icon">This is the speaker icon.</string>
@@ -112,6 +131,7 @@
     <string name="time_not_specified">Timings not specified</string>
 
     <!--Error Titles-->
+    <string name="no_internet_connection">No Internet connection</string>
     <string name="net_unavailable">Network not available</string>
     <string name="turn_on">Turn on WiFi or Mobile data in Settings</string>
     <string name="error">Error</string>
