feat : Add no of Sessions in TracksFragment (#1888)
* fix : FDroid build fail

* feat : Add no of Sessions in TracksFragment

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
+
+    <!--Quantity Strings(Plurals) for sessions-->
+    <plurals name="sessions">
+        <item quantity="zero">No sessions</item>
+        <item quantity="one">1 session</item>
+        <item quantity="other">%d sessions</item>
+    </plurals>
+
     <string name="app_name" translatable="false">OpenEvent</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
