--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -128,6 +128,7 @@
     <string name="share">Share</string>
     <string name="add_to_calendar">Add to Calendar</string>
     <string name="upcoming">Upcoming</string>
+    <string name="ticket">Get Tickets</string>
 
     <!--Search Titles-->
     <string name="global_search_hint">Search App</string>
