fix: Provide Ascending/Descending option in sorting (#2008)
- Add buttons to Sort dialog box for ascending / descending option

Fixes #2005

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -295,4 +295,6 @@
     <string name="copyright">Copyright</string>
     <string name="call_for_speakers">Call For Speakers</string>
     <string name="download_latest_data">Download Latest Data</string>
+    <string name="ascending">Ascending</string>
+    <string name="descending">Descending</string>
 </resources>
