fix: Improved the UI for SpeakerDetailsActivity (#2037)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -298,4 +298,7 @@
     <string name="download_latest_data">Download Latest Data</string>
     <string name="ascending">Ascending</string>
     <string name="descending">Descending</string>
+    <string name="speakers_bio">About me</string>
+    <string name="social_media">Social media</string>
+    <string name="sessions_title_card">Sessions</string>
 </resources>
