fix: Format text in error dialog (#2186)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -148,6 +148,8 @@
     <string name="net_unavailable">Network not available</string>
     <string name="turn_on">Turn on WiFi or Mobile data in Settings</string>
     <string name="error">Error</string>
+    <string name="http_error">HTTP Error</string>
+    <string name="api_not_found">API Not Found</string>
 
     <string name="empty_list">No Bookmarks Available</string>
     <string name="bullet">"•"</string>
