fix: Change text color of subtitle to black (#2193)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -314,4 +314,8 @@
     <string name="speakers_details">Speaker(s) :</string>
     <string name="description_details">Description :</string>
 
+    <!--Tracks Session Status-->
+    <string name="status_upcoming">UPCOMING</string>
+    <string name="status_ongoing">ONGOING</string>
+
 </resources>
