--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
     <string name="menu_about">About us</string>
     <string name="session">Session Detail</string>
     <string name="menu_schedule">Schedule</string>
+    <string name="menu_notification">Notifications</string>
     <string name="descriptionEmpty">Description: To be updated soon</string>
     <string name="menu_faqs">FAQs</string>
 
@@ -206,6 +207,7 @@
     <string name="noSponsors">No Sponsors yet!</string>
     <string name="noTracks">No Tracks yet!</string>
     <string name="noFeed">No Posts yet!</string>
+    <string name="no_notification">No notifications yet!</string>
     <string name="charges_warning">Data charges may apply</string>
     <string name="tracks">Track</string>
     <string name="dot_session">:&#160;</string>
@@ -332,5 +334,6 @@
     <string name="featured_speakers_header">Featured Speakers</string>
     <string name="login_to_see_faqs">Please login to see faqs!</string>
     <string name="login_to_view_faqs">Sorry you need to log in to view the FAQs.</string>
+
 
 </resources>
