fix: Fix crash, show invalid track message instead (#2346)
* fix #2343: Fix crash, show invalid track message instead

* fix #2343: Fix crash with null check on Track

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -152,6 +152,7 @@
     <string name="error">Error</string>
     <string name="http_error">HTTP Error</string>
     <string name="api_not_found">API Not Found</string>
+    <string name="invalid_track">Invalid track</string>
 
     <string name="empty_list">No Bookmarks Available</string>
     <string name="bullet">"•"</string>
