fix: Let the user select his sharing medium everytime (#2403)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -340,6 +340,6 @@
     <string name="twitter_feed">Twitter Feed</string>
     <string name="featured_speakers_header">Featured Speakers</string>
     <string name="login_to_continue">Please login to continue</string>
-
+    <string name="share_via">Share via</string>
 
 </resources>
