fix : Share 'Call for speakers' message directly from app (#2467)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -338,6 +338,7 @@
     <string name="about_fragment_announcement">%s at %s</string>
     <string name="about_fragment_to_date_event">To: %s</string>
     <string name="about_fragment_from_date_event">From: %s</string>
+    <string name="email_subject">Be a Speaker at the %s</string>
 
     <string name="twitter_feed">Twitter Feed</string>
     <string name="featured_speakers_header">Featured Speakers</string>
