--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -48,6 +48,8 @@
     <string name="discount_code_min_quantity">Minimum Quantity : %1$d</string>
     <string name="discount_code_max_quantity">Maximum Quantity : %1$d</string>
     <string name="menu_feedback">Feedbacks</string>
+    <string name="error_posting_feedback">Error Posting!</string>
+    <string name="success_posting_feedback">Successfully Posted!</string>
 
     <string name="logged_in_successfully">Successfully logged in</string>
     <string name="logged_out_successfully">Successfully logged out</string>
