--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -286,7 +286,7 @@
     <string name="right_arrow" translatable="false">Right Arrow</string>
 
     <!--About Screen-->
-    <string name="welcome_message">Welcome to %1$s!</string>
+    <string name="welcome_message">Welcome To</string>
     <string name="event_open">Event Open</string>
     <string name="event_venue">VENUE</string>
     <string name="organiser_description">Organiser Description</string>
@@ -348,5 +348,8 @@
     <string name="share_via">Share via</string>
 
     <string name="mobile_data_pref_warning">Wifi not found. Do you want to download using Mobile Data?</string>
+
+    <string name="starts_on">Starts On</string>
+    <string name="ends_on">Ends On</string>
 
 </resources>
